@@ -66,7 +66,7 @@ dnl compiler characteristics
 
 dnl library functions
 
-AC_REPLACE_FUNCS(strdup getcwd getdomainname strerror hstrerror basename fputchar fnmatch inet_aton)
+AC_REPLACE_FUNCS(strdup getcwd getdomainname strerror hstrerror basename fputchar fnmatch inet_aton getaddrinfo)
 
 AC_CHECK_FUNCS(tparam, [tparam=1], [tparam=0])
 if test "$tparam" -ne 1
